--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "astropy>=7.1.0",
+    "ipykernel>=6.30.1",
     "matplotlib>=3.10.6",
     "numpy>=2.3.3",
     "plotly>=6.3.0",
