--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "matplotlib>=3.10.6",
     "nbformat>=5.10.4",
     "numpy>=2.3.3",
+    "pandas>=2.3.3",
     "pathlib>=1.0.1",
     "plotly>=6.3.0",
     "scipy>=1.16.2",
