--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "pandas>=2.3.3",
     "pathlib>=1.0.1",
     "plotly>=6.3.0",
+    "kaleido>=0.2.1",
     "scipy>=1.16.2",
 ]
 [tool.ruff]
