--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,7 @@ data/TESS/**/*.fits
 
 # Output and report files
 outputs/
-reports/
+# reports/
 
 # Jupyter notebook checkpoints
 .ipynb_checkpoints/
