docs: update project documentation and configuration
- update README.md with detailed project structure including new modules
- update AGENTS.md with correct directory tree and latest guidelines
- update .gitignore to ignore executed notebooks and enforce data directory structure

--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,12 @@ wheels/
 Thumbs.db
 
 # Data files
-data/TESS/**/*.fits
+# Ignore everything in TESS data directory
+data/TESS/**/*
+# But allow directories to be tracked (so we can enforce structure)
+!data/TESS/**/
+# And allow .gitkeep files (to keep otherwise empty directories)
+!data/TESS/**/*.gitkeep
 
 # Output and report files
 outputs/
@@ -39,3 +44,5 @@ outputs/
 
 #legacy code
 legacy/
+# Temporary executed notebooks
+*_exec.ipynb
